// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when URL is not specified renders correctly link of type button 1`] = `
<a
  className="govuk-button govuk-button--start"
  data-module="govuk-button"
  draggable="false"
  onClick={null}
  role="button"
/>
`;

exports[`when URL is not specified renders correctly without specified type 1`] = `
<a
  className="govuk-link"
  onClick={null}
/>
`;

exports[`when URL passed in as prop renders correctly link of type button 1`] = `
<a
  className="govuk-button govuk-button--start"
  data-module="govuk-button"
  draggable="false"
  href="https://test.com"
  onClick={null}
  role="button"
/>
`;

exports[`when URL passed in as prop renders correctly without specified type 1`] = `
<a
  className="govuk-link"
  href="https://test.com"
  onClick={null}
/>
`;
